# reaper-terminal

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md
src/: native_terminal.cpp  native_terminal.h  reaper_extension.cpp
src/platform/: native_terminal_unix.cpp  native_terminal_windows.cpp
tests/: native_terminal_tests.cpp
